# mdbook-treesitter

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
example-book/: book.toml
example-book/examples/: Cargo.toml  geometry.rs
example-book/src/: SUMMARY.md  geometry.md  intro.md
src/: config.rs  language.rs  lib.rs  main.rs  query.rs
tests/: integration.rs
