[package]
name = "mdbook-treesitter"
version = "0.1.0"
edition = "2024"
description = "An mdBook preprocessor that uses tree-sitter to extract code from files"

[[bin]]
name = "mdbook-treesitter"
path = "src/main.rs"

[lib]
name = "mdbook_treesitter"
path = "src/lib.rs"

[dependencies]
mdbook-preprocessor = "0.5"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-toml = { package = "tree-sitter-toml-updated", version = "0.20" }
tree-sitter-md = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
streaming-iterator = "0.1"
jaq-std = "3.0.0"
jaq-core = "3.0.0"
jaq-json = "2.0.0"

[dev-dependencies]
tempfile = "3"
