[package]
name = "mdbook-ts"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "An mdBook preprocessor that uses tree-sitter to extract code snippets from source files"
license = "MIT"
repository = "https://github.com/LoricAndre/mdbook-treesitter"
homepage = "https://github.com/LoricAndre/mdbook-treesitter"
documentation = "https://docs.rs/mdbook-ts"
readme = "README.md"
keywords = ["mdbook", "treesitter", "preprocessor", "documentation", "code"]
categories = ["development-tools", "text-processing"]

[[bin]]
name = "mdbook-treesitter"
path = "src/main.rs"

[lib]
name = "mdbook_treesitter"
path = "src/lib.rs"

[dependencies]
mdbook-preprocessor = "0.5"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-toml = { package = "tree-sitter-toml-updated", version = "0.20" }
tree-sitter-md = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
streaming-iterator = "0.1"
jaq-std = "3.0.0"
jaq-core = "3.0.0"
jaq-json = "2.0.0"
log = "0.4.29"
env_logger = "0.11.10"

[dev-dependencies]
tempfile = "3"
